# redos

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  riscv64.md  x86_64.md
.cargo/: config
lib_redos/: Cargo.toml
lib_redos/src/: lib.rs
os/: Cargo.toml  Makefile
os/.cargo/: config
os/src/: console.rs  entry.asm  lib.rs  panic.rs
os/src/drivers/: device_tree.rs  driver.rs  mod.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/drivers/bus/: virtio_mmio.rs
os/src/fs/: mod.rs  stdin.rs  stdout.rs
os/src/interrupt/: handler.rs  mod.rs  timer.rs
os/src/kernel/: condvar.rs  mod.rs  syscall.rs
os/src/memory/: addr.rs  frame_tracker.rs  kernel_heap.rs
os/src/memory/mapping/: mapping.rs  memory_set.rs  mod.rs  page_table.rs  segment.rs
os/src/process/: alarm.rs  condvar.rs  mod.rs  mutex.rs  process.rs  processor.rs  thread.rs
os/src/process/scheduler/: hrrn.rs  mod.rs
src/: arena.rs  entry.asm  kernel_heap.rs  lib.rs  main.rs  panic.rs  riscv64_entry.asm  sbi.rs  stdio.rs  vga_buffer.rs
src/arch/: Cargo.toml
src/arch/riscv64/: Cargo.toml  io.rs  mod.rs  panic.rs  sbi.rs
src/arch/riscv64/interrupt/: handler.rs  mod.rs  timer.rs
src/arch/riscv64/src/: lib.rs  sbi.rs
src/arch/riscv64/tests/: mod.rs
src/arch/x86_64/: Cargo.toml  console.rs  mod.rs  panic.rs  vga.rs
src/arch/x86_64/src/: lib.rs
src/interrupt/: context.rs  handler.rs  interrupt.asm  mod.rs  timer.rs
src/memory/: addr.rs  address.rs  frame.rs  frame_tracker.rs  heap.rs  mod.rs
src/memory/allocator/: mod.rs  stacked_allocator.rs
src/memory/bitmap/: Cargo.toml
src/memory/bitmap/src/: lib.rs
src/memory/frame/: allocator.rs  frame_tracker.rs  mod.rs
src/memory/mapping/: mod.rs  page_table.rs  page_table_entry.rs
src/process/: kernel_stack.rs  mod.rs  processor.rs  thread.rs
src/tests/: alloc_test.rs  mod.rs
src/vga/: Cargo.toml
src/vga/src/: lib.rs
tests/: basic_boot.rs  should_panic.rs
user/: Cargo.toml
user/src/: console.rs  lib.rs  syscall.rs
user/src/redos/: mod.rs  mutex.rs  syscall.rs
