[package]
name = "redos"
version = "0.1.0"
authors = ["jiang <392711804@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = "0.9.14"
volatile = "0.4.3"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { version = "0.6.0", features = ["inline-asm"] }

[dependencies]
buddy_system_allocator = "0.7.0"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
spin = "0.7.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See https://github.com/rust-osdev/bootimage
[package.metadata.bootimage]
test-timeout = 300          # (in seconds)
build-command = ["xbuild"]

[features]
test_riscv64 = []