[package]
name = "redos"
version = "0.1.0"
authors = ["jiang <392711804@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.0"
bit_field = "0.10.1"
bitflags = "1.2.1"
buddy_system_allocator = "0.7.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"