[package]
name = "user_lib"
version = "0.1.0"
authors = ["jiang <392711804@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
lib_redos = { path = "../lib_redos" }